force-app/main/default/objects/Activity__c/fields/NoOfGroups_Marae__c.field-meta.xml
<CustomField>
    <fullName>NoOfGroups_Marae__c</fullName>
    <label>No Of Groups Marae</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>