force-app/main/default/objects/Activity__c/fields/NoOfGroups_Total__c.field-meta.xml
<CustomField>
    <fullName>NoOfGroups_Total__c</fullName>
    <formula>NoOfGroups_Hapu__c  +  NoOfGroups_Iwi__c  +  NoOfGroups_Kaupapa_H_kinakina__c  +  NoOfGroups_KohangaPuna__c  +  NoOfGroups_Kura_Kaupapa__c  +  NoOfGroups_Marae__c  +  NoOfGroups_Other__c  +  NoOfGroups_Waka__c  +  NoOfGroups_Wh_nau__c  +  NoOfGroups_Whare_Kura__c  +  NoOfGroups_Whare_Wananga__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No Of Groups Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>