force-app/main/default/objects/Activity__c/fields/NoOfGroups_Wh_nau__c.field-meta.xml
<CustomField>
    <fullName>NoOfGroups_Wh_nau__c</fullName>
    <label>No Of Groups Whānau</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>