force-app/main/default/objects/Activity__c/fields/NoOfGroups_Whare_Kura__c.field-meta.xml
<CustomField>
    <fullName>NoOfGroups_Whare_Kura__c</fullName>
    <label>No Of Groups Whare Kura</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>