force-app/main/default/objects/Activity__c/fields/Particaipation_WhanauType_Hapu__c.field-meta.xml
<CustomField>
    <fullName>Particaipation_WhanauType_Hapu__c</fullName>
    <label>WhanauType Hapu</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>