force-app/main/default/objects/Activity__c/fields/Particaipation_WhanauType_KohangaPunaReo__c.field-meta.xml
<CustomField>
    <fullName>Particaipation_WhanauType_KohangaPunaReo__c</fullName>
    <label>WhanauType KohangaPunaReo</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>