force-app/main/default/objects/Activity__c/fields/Particaipation_WhanauType_Total__c.field-meta.xml
<CustomField>
    <fullName>Particaipation_WhanauType_Total__c</fullName>
    <formula>Particaipation_WhanauType_Hapu__c  +  Particaipation_WhanauType_Kaupapa_H_kina__c  +  Particaipation_WhanauType_KohangaPunaReo__c  +  Particaipation_WhanauType_Kura_Kaupapa__c  +  Particaipation_WhanauType_lwi__c  +  Particaipation_WhanauType_Marae__c  +  Particaipation_WhanauType_Other__c  +  Particaipation_WhanauType_Waka__c  +  Particaipation_WhanauType_Wh_nau__c  +  Particaipation_WhanauType_Whare_Kura__c  +  Particaipation_WhanauType_Whare_Wananga__c + Particaipation_WhanauType_Whanau_Whaikah__c + Particaipation_WhanauType_Mana_Tipua__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>WhanauType Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>