force-app/main/default/objects/Activity__c/fields/Particaipation_WhanauType_Wh_nau__c.field-meta.xml
<CustomField>
    <fullName>Particaipation_WhanauType_Wh_nau__c</fullName>
    <label>WhanauType Whānau</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>