force-app/main/default/objects/Activity__c/fields/Participation_NoOfParticipants__c.field-meta.xml
<CustomField>
    <fullName>Participation_NoOfParticipants__c</fullName>
    <label>Participation No Of Participants</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>