force-app/main/default/objects/Activity__c/fields/Planned_Act_Change_Request_Reson__c.field-meta.xml
<CustomField>
    <fullName>Planned_Act_Change_Request_Reson__c</fullName>
    <label>Planned Act Change Request Reason</label>
    <type>TextArea</type>
</CustomField>