force-app/main/default/objects/Activity__c/fields/reason_for_dimension_with__c.field-meta.xml
<CustomField>
    <fullName>reason_for_dimension_with__c</fullName>
    <label>With - Change Request Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>