force-app/main/default/objects/Activity__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <label>Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bay of Plenty</fullName>
            </value>
            <value>
                <fullName>Coromandel</fullName>
            </value>
            <value>
                <fullName>East Coast</fullName>
            </value>
            <value>
                <fullName>Hawke&apos;s Bay/Wairarapa</fullName>
            </value>
            <value>
                <fullName>Manawatū/Horowhenua/Wellington</fullName>
            </value>
            <value>
                <fullName>Northland/Auckland Region</fullName>
            </value>
            <value>
                <fullName>Rotorua/Taupō</fullName>
            </value>
            <value>
                <fullName>South Island/Chatham Islands</fullName>
            </value>
            <value>
                <fullName>Taranaki Region</fullName>
            </value>
            <value>
                <fullName>Waikato/King Country</fullName>
            </value>
            <value>
                <fullName>Whanganui/Rangitīkei</fullName>
            </value>
            <value>
                <fullName>Auckland</fullName>
                <isActive>false</isActive>
                <label>Auckland</label>
            </value>
            <value>
                <fullName>Canterbury/West Coast</fullName>
                <isActive>false</isActive>
                <label>Canterbury/West Coast</label>
            </value>
            <value>
                <fullName>Counties Manakau</fullName>
                <isActive>false</isActive>
                <label>Counties Manakau</label>
            </value>
            <value>
                <fullName>Gisborne</fullName>
                <isActive>false</isActive>
                <label>Gisborne</label>
            </value>
            <value>
                <fullName>Hawkes Bay</fullName>
                <isActive>false</isActive>
                <label>Hawkes Bay</label>
            </value>
            <value>
                <fullName>Manawatu</fullName>
                <isActive>false</isActive>
                <label>Manawatu</label>
            </value>
            <value>
                <fullName>North Harbour</fullName>
                <isActive>false</isActive>
                <label>North Harbour</label>
            </value>
            <value>
                <fullName>Northland</fullName>
                <isActive>false</isActive>
                <label>Northland</label>
            </value>
            <value>
                <fullName>Otago</fullName>
                <isActive>false</isActive>
                <label>Otago</label>
            </value>
            <value>
                <fullName>Southland</fullName>
                <isActive>false</isActive>
                <label>Southland</label>
            </value>
            <value>
                <fullName>Taranaki</fullName>
                <isActive>false</isActive>
                <label>Taranaki</label>
            </value>
            <value>
                <fullName>Tasman</fullName>
                <isActive>false</isActive>
                <label>Tasman</label>
            </value>
            <value>
                <fullName>Waikato</fullName>
                <isActive>false</isActive>
                <label>Waikato</label>
            </value>
            <value>
                <fullName>Waitakere</fullName>
                <isActive>false</isActive>
                <label>Waitakere</label>
            </value>
            <value>
                <fullName>Wellington</fullName>
                <isActive>false</isActive>
                <label>Wellington</label>
            </value>
            <value>
                <fullName>Whanganui</fullName>
                <isActive>false</isActive>
                <label>Whanganui</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>