force-app/main/default/objects/Activity__c/fields/requestForChangeRequest__c.field-meta.xml
<CustomField>
    <fullName>requestForChangeRequest__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Request For Change Request</label>
    <type>Checkbox</type>
</CustomField>