force-app/main/default/objects/Activity__c/fields/Through_TypeActNgaTaonga__c.field-meta.xml
<CustomField>
    <fullName>Through_TypeActNgaTaonga__c</fullName>
    <label>Through Nga Taonga</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>