force-app/main/default/objects/Activity__c/fields/With_PrposeTeRaoIntegral__c.field-meta.xml
<CustomField>
    <fullName>With_PrposeTeRaoIntegral__c</fullName>
    <label>With Purpose Te Reo Integral</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fully</fullName>
            </value>
            <value>
                <fullName>Partially</fullName>
            </value>
            <value>
                <fullName>Not At All</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>