force-app/main/default/objects/Activity__c/fields/With_PrposeTeReaoOther__c.field-meta.xml
<CustomField>
    <fullName>With_PrposeTeReaoOther__c</fullName>
    <label>With Purpose Te Reo Other</label>
    <length>20</length>
    <type>Text</type>
</CustomField>