force-app/main/default/objects/Activity__c/fields/With_PrposeTikangaOppApply__c.field-meta.xml
<CustomField>
    <fullName>With_PrposeTikangaOppApply__c</fullName>
    <label>With Purpose Tikanga Opp Apply</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>