force-app/main/default/objects/Activity__c/fields/With_PrposeTikangaOther__c.field-meta.xml
<CustomField>
    <fullName>With_PrposeTikangaOther__c</fullName>
    <label>With Purpose Tikanga Other</label>
    <length>20</length>
    <type>Text</type>
</CustomField>