force-app/main/default/objects/Activity__c/fields/With_SigniOfTikanga__c.field-meta.xml
<CustomField>
    <fullName>With_SigniOfTikanga__c</fullName>
    <label>With Signi Of Tikanga</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Extremely Significant</fullName>
            </value>
            <value>
                <fullName>Very Significant</fullName>
            </value>
            <value>
                <fullName>Neutral</fullName>
            </value>
            <value>
                <fullName>Not Very Significant</fullName>
            </value>
            <value>
                <fullName>Not At All Significant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>