force-app/main/default/objects/Activity__c/fields/With_UseOfTeReo__c.field-meta.xml
<CustomField>
    <fullName>With_UseOfTeReo__c</fullName>
    <label>With Use Of Te Reo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Māori only</fullName>
            </value>
            <value>
                <fullName>Mainly In Māori</fullName>
            </value>
            <value>
                <fullName>Mix of Māori &amp; English</fullName>
            </value>
            <value>
                <fullName>Mainly English</fullName>
            </value>
            <value>
                <fullName>English Only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>