force-app/main/default/objects/Activity__c/validationRules/AGE_OF_PARTICIPANTS.validationRule-meta.xml
<ValidationRule>
    <fullName>AGE_OF_PARTICIPANTS</fullName>
    <active>true</active>
    <description>TOTAL PARTICIPANTS MATCHING WITH &apos;AGE_OF_PARTICIPANTS&apos;</description>
    <errorConditionFormula>IF(( AgeOfParticipants_Mokopuna__c  +  AgeOfParticipants_Taiohi__c  +  AgeOfParticipants_Rangatahi13_19__c  + AgeOfParticipants_Matua_20_39__c +  AgeOfParticipants_Pakeke40_59__c  +  
AgeOfParticipants_Kaum_tua__c  +  AgeOfParticipants_DidNotRespond__c ) &lt;&gt; (Participation_NoOfParticipants__c)  , True, False)</errorConditionFormula>
    <errorMessage>TOTAL PARTICIPANTS NOT MATCHING WITH &apos;AGE OF PARTICIPANTS&apos;</errorMessage>
</ValidationRule>