force-app/main/default/objects/Activity__c/validationRules/ETHNICITY_OF_PARTICIPANTS.validationRule-meta.xml
<ValidationRule>
    <fullName>ETHNICITY_OF_PARTICIPANTS</fullName>
    <active>true</active>
    <description>TOTAL PARTICIPANTS MATCHING WITH &apos;ETHNICITY_OF_PARTICIPANTS&apos;</description>
    <errorConditionFormula>IF(( EthnicityOfParticipants_M_ori__c  +  EthnicityOfParticipants_Non_M_ori__c  +  EthnicityOfParticipants_DidNotRespond__c ) &lt;&gt; ( Participation_NoOfParticipants__c ), True, False)</errorConditionFormula>
    <errorMessage>TOTAL PARTICIPANTS NOT MATCHING WITH &apos;ETHNICITY OF PARTICIPANTS&apos;</errorMessage>
</ValidationRule>